# authco

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/: __init__.py
infra/: DockerFile  docker-compose-dev-api.yaml  docker-compose-dev-resources.yaml  docker-compose-dev.yaml  docker-dev.env
infra/dummy_api_server/: Dockerfile  dummy_app.py  pyproject.toml
infra/nginx/: nginx.conf
infra/nginx/conf.d/: api_proxy.conf  authco.conf  dummy_server.conf  messages.conf
infra/nginx/frontend/: index.html
