[tool.poetry]
name = "AuthCo"
version = "0.1.0"
description = ""
authors = ["MU-Software <musoftware@mudev.cc>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
pydantic = "^2.1.1"
SQLAlchemy = "^2.0.19"
asyncpg = "^0.28.0"
aiohttp = "^3.8.5"
Jinja2 = "^3.1.2"
jupyterlab = "^4.0.3"
redis = "^4.6.0"
PyJWT = "^2.8.0"
Authlib = "^1.2.1"
user-agents = "^2.2.0"
PyYAML = "^6.0.1"
lxml = "^4.9.3"
sadisplay = "^0.4.9"
argon2-cffi = "^21.3.0"
passlib = "^1.7.4"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
eventlet = "^0.33.3"
gunicorn = "^21.2.0"
alembic = "^1.11.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pylint = "^2.17.5"
flake8 = "^6.1.0"
mypy = "^1.4.1"
black = "^23.7.0"
bandit = "^1.7.5"
isort = "^5.12.0"
refurb = "^1.18.0"
flake8-noqa = "^1.3.2"
flake8-bugbear = "^23.7.10"
types-requests = "^2.31.0.2"
types-pyyaml = "^6.0.12.11"
types-redis = "^4.6.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
