[tool.poetry]
name = "DummyServer"
version = "0.1.0"
description = ""
authors = ["MU-Software <musoftware@mudev.cc>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
eventlet = "^0.33.3"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
